# yabasic

./: .gitattributes  .gitignore  ChangeLog.org  DEVNOTES.org  LICENSE  README.org  Rakefile  help_build.rake  tag-message
ansible/: README.org  ansible.cfg  build-freebsd.yaml  prep2build.yaml  prepare2build.yaml
common/src/: .gitignore  bison.h  config.h  flex.c  function.c  yabasic.h
doc/: README.org
products/: yabasic-2.77.1-1.x86_64.rpm  yabasic_2.77.1_amd64.deb
unix/: README.org  Rakefile  utils.rb
unix/doc/: .gitignore  README.org  Yabasic.texi  _yabasic.xml  a2h  mystyle.xsl  mystyle2.xsl  yabasic.1.erb  yabasic.roff  yabasic.rtf  yabasic.xml  yabasic.xml.erb  yabasic_to_man
unix/doc/docbook/: mystyle.xsl
unix/documentation/: mystyle.xsl  mystyle2.xsl  x2h
unix/interpreter/: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  bison.output  config.h.in  config.status  configure  configure.ac  format_sources.sh  libtool  runme  yabasic.spec.erb
unix/interpreter/tests/: break.yab  bugs.yab  grammar.yab
unix/lang/: .gitignore  AUTHORS  COPYING  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  README.org  TAGS  aclocal.m4  bison.c  bison.h  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.lineno  configure.scan  configure~  demo.yab  extcall.c  external.c  flex.c  flow.c  foreign.c  function.c  graphic.c  io.c  libtool  main.c  runme  symbol.c  whereami.c  yabasic.1  yabasic.bison  (+3 more)
unix/lang/.xvpics/cvs/: Repository  Root
unix/lang/contrib/: README_editors.org  yabasic.nanorc  yabasic.syntax
unix/lang/investigations/: README.org
unix/lang/study/: README.org  colors.yab  default_console_colors.yab  expose.yab  input_after_clear.yab  input_with_color.yab  intensity.yab  notes.org  two_print.yab
unix/lang/tests/: README.org  array.yab  bind_import  bind_import.yab  bitops.yab  break.yab  bugs.yab  compare.yab  compile.yab  docu.sh  escape-sequences.yab  eval.yab  external.yab  for.yab  foreign.yab  foreign2.yab  foreign3.yab  foreign_set_get.yab  hex.yab  hex_bin.yab  import.yab  inkey.sh  interpreter_and_program.yab  io.yab  library1.yab  library10.yab  library2.yab  library3.yab  library4.yab  library5.yab  library6.yab  library7.yab  library8.yab  library9.yab  local.yab  long_variable_name.yab  nested_bind_import  nested_bind_import.yab  nested_import.yab  numbers.yab  (+23 more)
unix/lang/tests/common/: get_put_screen.yab  random.yab  speed.yab  using.yab
unix/lang/tests/error/: break_error.yab  break_error2.yab  error_after_import.yab  error_escaping_backslash.yab  error_in_eval.yab  error_in_subr.yab  error_line_number.yab  error_line_number2.yab  error_line_number_import.yab  error_line_number_with_line_numbers.yab  error_long_libname.yab  error_long_str_format.yab  error_mismatched_for.yab  error_null_pointer.yab  error_open.yab  error_short_if_with_endif.yab  error_short_if_without_statement.yab  error_string_not_terminated.yab  error_unknown_function.yab  error_within_short_if.yab  explicit_error.yab  explicit_error_in_subr.yab  explicit_error_within_if.yab  explicit_error_within_short_if.yab  extra_endif_on_short_if.yab  import_error_line_number.yab  import_error_line_number_after.yab  library11.yab  library2e.yab  library3e.yab  library4e.yab  library5e.yab  library6e.yab  malloc_overflow.yab  missing_endif_in_while.yab  missing_until.yab  missing_until_in_for.yab  missing_until_in_library.yab  switch_goto_error.yab  switch_goto_error2.yab
unix/lang/tests/interactive/: inkey_mousex.yab
unix/lang/tests/resources/: digits.txt  docu.yab  in_script.sh  inkey.yab  print-at.yab  read_stdin.yab  read_stdin2.yab  silent.yab
web/: .gitignore  README.org  Rakefile  aboutme.html  artistic.html  changing.html  content_changing.html  content_copyright.html  content_download.html.erb  content_faq.html  content_history.html  content_log.html  content_log.html.erb  content_mit.html  content_new_docu.html  content_old_docu.html  content_related.html  content_screenshots.html  content_support.html  content_whatsnew.html  content_whatsnew.html.erb  content_yabasic.html  content_yabasic_old_de.html  copyright.html  download.html  download.html.erb  faq.html  fragement_log.html  fragment_log.html  functions.js  gpl.html  guts.html  head.html  head.html.erb  history.html  index.html  log.html  mit.html  museum.html  new_docu.html  (+16 more)
windows/: .gitignore  README.org  README_libffi.org  Rakefile  run_iexpress.ps1  utils.rb  yabasic.sln  yabbin.sfx  yabsrc.sfx
windows/VisualStudioProjects/: Yabasic.dsw  Yabasic.ncb  Yabasic.opt  Yabasic.sln  yabbin.sfx  yabsrc.sfx
windows/VisualStudioProjects/interpreter/: Bison.c  Bison.h  Config.h  Flex.c  bison.txt  function.c  graphic.c  io.c  main.c  news.txt  resource.h  symbol.c  yabasic.aps  yabasic.dsp  yabasic.dsw  yabasic.h  yabasic.htm  yabasic.ncb  yabasic.opt  yabasic.plg  yabasic.rc  yabasic.vcxproj  yabasic.vcxproj.filters
windows/VisualStudioProjects/interpreter/Debug/: Itchy.ini  RCa05988  vc120.idb  yabasic.ilk
windows/VisualStudioProjects/interpreter/Release/: yabasic.bsc  yabasic.res
windows/VisualStudioProjects/setup/: resource.h  setup.dsp  setup.dsw  setup.ncb  setup.opt  setup.plg  setup.vcxproj  setup.vcxproj.filters  yabinst.aps  yabinst.c  yabinst.rc
windows/VisualStudioProjects/setup/Debug/: RCa07324  setup.ilk  vc120.idb  yabinst.res
windows/VisualStudioProjects/setup/Debug/setup.tlog/: CL.read.1.tlog  (+9 more)
windows/YabPack/: PackBin.bat  PackBin.pif  PackSrc.bat  YabBin.txt  Yabver.txt  pack.pl  pack_unix.pl  yabsrc.txt
windows/YabPack/Source/: Readme.txt
windows/lang/: ffi.h  flex.txt  resource.h  yabasic.dsp  yabasic.dsw  yabasic.htm  yabasic.rc  yabasic.vcxproj  yabasic.vcxproj.filters
windows/lang/tests/: external.yab  text_colour.yab
windows/pack/: pack.out  packsrc.pif
windows/resources/: README.txt  yabasic-setup.SED.erb
windows/setup/: RCa49865  resource.h  setup.dsp  setup.dsw  setup.vcxproj  setup.vcxproj.filters  yabinst.c  yabinst.rc
windows/wrapper/: wrapper.c  wrapper.vcxproj  wrapper.vcxproj.filters
(+21 files in other folders)
